--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,5 @@
 body {
+    background: linear-gradient(to right, #bbffff, #ffffff);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
@@ -31,17 +32,13 @@ body {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
 }
-.description-box ul {
-    margin: 10px;
-    padding-left: 20px;
-    list-style-type: disc;
-}
+
 .selfie {
-    width: 40%;
+    width: 30%;
     text-align: right;
 }
 .selfie img {
-    margin-top: 60px;
+    margin-top: 50px;
     max-width: 80%;
     height: auto;
     border-radius: 10px;
