--- a/style1.css
+++ b/style1.css
@@ -166,13 +166,100 @@ body {
     text-align: center;
 }
 
-.resume-page .description-box:nth-child(2) {
+.skill-box {
+    padding: 10px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+}
+
+.resume-page .skill-box:nth-child(2) {
     grid-column: 2; 
     grid-row: 1; 
 }
 
-.resume-page .description-box:nth-child(3) {
+.resume-page .skill-box:nth-child(3) {
     grid-column: 2; 
     grid-row: 2; 
 }
+
+.cadence-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cadence-picture img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    width: 500px;
+    margin-bottom: 10px;
+}
+
+.cpp-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cpp-picture img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    width: 500px;
+}
+
+/*portfolio*/
+
+.rows{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+}
+
+.adder-picture {
+    flex: 1 1 40%;
+    display: flex;
+    justify-content: center;
+    
+}
+.adder-picture img {
+    width: 500px;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.m6502-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.m6502-picture img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    width: 500px;
+}
+
+.nand2-picture {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.nand2-picture img {
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    width: 500px;
+}
+
 
